infrastructure/sonarqube/sonarqube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  type: ClusterIP
  selector:
    app: sonarqube
  ports:
  - port: 9000
    targetPort: 9000
